// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Search /> should render 1`] = `
<div>
  <label
    class="sc-dUipGc hgoSmo"
    for="convention-search"
  >
    Renseignez le nom de votre convention collective, le nom de votre entreprise ou son SIRET.
  </label>
  <span
    class="sc-bQmOxr iqEHsz sc-jKvnYE gFVDMM"
  >
    <input
      class="sc-fWQKxP iaRXHc"
      id="convention-search"
      name="q"
      placeholder="Nom de la convention collective, de l’entreprise ou son SIRET"
      type="search"
      value=""
    />
  </span>
  <p
    class="sc-bTUVah hXbUfO"
  >
    Vous ne connaissez pas ou ne trouvez pas votre convention collective ?
    <span
      class="sc-uokDu isqtOz"
    >
      Consultez
       
      <button
        class="sc-hhOBVt clLQVO sc-dTjBdT gTGAtK"
        type="button"
      >
        notre aide
      </button>
      .
    </span>
  </p>
</div>
`;

exports[`<Search /> should show no results when no result 1`] = `
<div>
  <label
    class="sc-dUipGc hgoSmo"
    for="convention-search"
  >
    Renseignez le nom de votre convention collective, le nom de votre entreprise ou son SIRET.
  </label>
  <span
    class="sc-bQmOxr iqEHsz sc-jKvnYE gFVDMM"
  >
    <input
      class="sc-fWQKxP iaRXHc"
      id="convention-search"
      name="q"
      placeholder="Nom de la convention collective, de l’entreprise ou son SIRET"
      type="search"
      value="9999"
    />
  </span>
  <div
    class="sc-hZNxer kWwXln"
  >
    <p
      class="sc-GKYbw gcbROE"
    >
      Aucun résultat n’a été trouvé.
    </p>
  </div>
  <p
    class="sc-bTUVah hXbUfO"
  >
    Vous ne connaissez pas ou ne trouvez pas votre convention collective ?
    <span
      class="sc-uokDu isqtOz"
    >
      Consultez
       
      <button
        class="sc-hhOBVt clLQVO sc-dTjBdT gTGAtK"
        type="button"
      >
        notre aide
      </button>
      .
    </span>
  </p>
</div>
`;

exports[`<Search /> should show spinner when loading 1`] = `
<div>
  <label
    class="sc-dUipGc hgoSmo"
    for="convention-search"
  >
    Renseignez le nom de votre convention collective, le nom de votre entreprise ou son SIRET.
  </label>
  <span
    class="sc-bQmOxr iqEHsz sc-jKvnYE gFVDMM"
  >
    <input
      class="sc-fWQKxP iaRXHc"
      id="convention-search"
      name="q"
      placeholder="Nom de la convention collective, de l’entreprise ou son SIRET"
      type="search"
      value="8888"
    />
  </span>
  <div
    class="sc-hZNxer kWwXln"
  >
    <p
      class="sc-GKYbw gcbROE"
    >
      <svg
        aria-labelledby="title desc"
        class="__react-svg-spinner_circle"
        height="1em"
        role="img"
        style="animation-duration: 750ms;"
        viewBox="0 0 32 32"
        width="1em"
      >
        <title
          id="title"
        >
          Circle loading spinner
        </title>
        <desc
          id="desc"
        >
          Image of a partial circle indicating "loading."
        </desc>
        <style>
          
      .__react-svg-spinner_circle{
          transition-property: transform;
          animation-name: __react-svg-spinner_infinite-spin;
          animation-iteration-count: infinite;
          animation-timing-function: linear;
      }
      @keyframes __react-svg-spinner_infinite-spin {
          from {transform: rotate(0deg)}
          to {transform: rotate(360deg)}
      }
    
        </style>
        <circle
          cx="16"
          cy="16"
          fill="none"
          r="12"
          role="presentation"
          stroke="rgba(0,0,0,0.4)"
          stroke-dasharray="43.982297150257104"
          stroke-linecap="round"
          stroke-width="4"
        />
      </svg>
       Recherche des convention collectives...
    </p>
  </div>
  <p
    class="sc-bTUVah hXbUfO"
  >
    Vous ne connaissez pas ou ne trouvez pas votre convention collective ?
    <span
      class="sc-uokDu isqtOz"
    >
      Consultez
       
      <button
        class="sc-hhOBVt clLQVO sc-dTjBdT gTGAtK"
        type="button"
      >
        notre aide
      </button>
      .
    </span>
  </p>
</div>
`;

exports[`<Search /> when input is IDCC, should search conventions 1`] = `
<div>
  <label
    class="sc-dUipGc hgoSmo"
    for="convention-search"
  >
    Renseignez le nom de votre convention collective, le nom de votre entreprise ou son SIRET.
  </label>
  <span
    class="sc-bQmOxr iqEHsz sc-jKvnYE gFVDMM"
  >
    <input
      class="sc-fWQKxP iaRXHc"
      id="convention-search"
      name="q"
      placeholder="Nom de la convention collective, de l’entreprise ou son SIRET"
      type="search"
      value="1234"
    />
  </span>
  <div
    class="sc-hZNxer kWwXln"
  >
    <div
      class="sc-jSUZER sc-fxTzYC kEfUQE kvUoQU"
    >
      <h3
        class="sc-iBYQkv iDmZxg"
        data-testid="heading"
      >
        CONVENTIONS COLLECTIVES (2
         
        résultats)
      </h3>
      <ul
        class="sc-lbVpMG fqAvkB"
      >
        <li
          class="sc-iWOQzb bipHFP"
        >
          <a
            class="sc-kSGOQU cSxfll"
            href="/convention-collective/275-small-titre"
          >
            small titre
             
            <span
              class="sc-dvEHMn dWhOUW"
            >
              (IDCC 
              0275
              )
            </span>
          </a>
        </li>
        <li
          class="sc-iWOQzb bipHFP"
        >
          <a
            class="sc-kSGOQU kUszRL"
            href="/convention-collective/276-smaller-convention-2"
          >
            smaller convention 2
             
            <span
              class="sc-dvEHMn dWhOUW"
            >
              (IDCC 
              0276
              )
            </span>
          </a>
        </li>
      </ul>
    </div>
  </div>
  <p
    class="sc-bTUVah hXbUfO"
  >
    Vous ne connaissez pas ou ne trouvez pas votre convention collective ?
    <span
      class="sc-uokDu isqtOz"
    >
      Consultez
       
      <button
        class="sc-hhOBVt clLQVO sc-dTjBdT gTGAtK"
        type="button"
      >
        notre aide
      </button>
      .
    </span>
  </p>
</div>
`;

exports[`<Search /> when input is a valid IDCC, should show only the perfect match 1`] = `
<div>
  <label
    class="sc-dUipGc hgoSmo"
    for="convention-search"
  >
    Renseignez le nom de votre convention collective, le nom de votre entreprise ou son SIRET.
  </label>
  <span
    class="sc-bQmOxr iqEHsz sc-jKvnYE gFVDMM"
  >
    <input
      class="sc-fWQKxP iaRXHc"
      id="convention-search"
      name="q"
      placeholder="Nom de la convention collective, de l’entreprise ou son SIRET"
      type="search"
      value="4567"
    />
  </span>
  <div
    class="sc-hZNxer kWwXln"
  >
    <div
      class="sc-jSUZER sc-fxTzYC kEfUQE kvUoQU"
    >
      <h3
        class="sc-iBYQkv iDmZxg"
        data-testid="heading"
      >
        CONVENTIONS COLLECTIVES (1
         
        résultat)
      </h3>
      <ul
        class="sc-lbVpMG fqAvkB"
      >
        <li
          class="sc-iWOQzb bipHFP"
        >
          <a
            class="sc-kSGOQU cSxfll"
            href="/convention-collective/4567-smaller-convention-2"
          >
            smaller convention 2
             
            <span
              class="sc-dvEHMn dWhOUW"
            >
              (IDCC 
              4567
              )
            </span>
          </a>
        </li>
      </ul>
    </div>
  </div>
  <p
    class="sc-bTUVah hXbUfO"
  >
    Vous ne connaissez pas ou ne trouvez pas votre convention collective ?
    <span
      class="sc-uokDu isqtOz"
    >
      Consultez
       
      <button
        class="sc-hhOBVt clLQVO sc-dTjBdT gTGAtK"
        type="button"
      >
        notre aide
      </button>
      .
    </span>
  </p>
</div>
`;

exports[`<Search /> when searching by text, should use enterprise API 1`] = `
<div>
  <label
    class="sc-dUipGc hgoSmo"
    for="convention-search"
  >
    Renseignez le nom de votre convention collective, le nom de votre entreprise ou son SIRET.
  </label>
  <span
    class="sc-bQmOxr iqEHsz sc-jKvnYE gFVDMM"
  >
    <input
      class="sc-fWQKxP iaRXHc"
      id="convention-search"
      name="q"
      placeholder="Nom de la convention collective, de l’entreprise ou son SIRET"
      type="search"
      value="hello"
    />
  </span>
  <div
    class="sc-hZNxer kWwXln"
  >
    <p
      class="sc-GKYbw gcbROE"
    >
      Le service de recherche est indisponible.
    </p>
  </div>
  <p
    class="sc-bTUVah hXbUfO"
  >
    Vous ne connaissez pas ou ne trouvez pas votre convention collective ?
    <span
      class="sc-uokDu isqtOz"
    >
      Consultez
       
      <button
        class="sc-hhOBVt clLQVO sc-dTjBdT gTGAtK"
        type="button"
      >
        notre aide
      </button>
      .
    </span>
  </p>
</div>
`;
